# ai_WorldCup

./: .claudeignore  BUSINESS.md  CLAUDE.md  archive.js  prd.json  prd_archive.json  progress.txt  progress_archive.txt  prompt.md  ralph.sh
football-server/: .env.example  .gitignore  alembic.ini  pyproject.toml  run.py  scalable-beaming-riddle.md
football-server/alembic/: env.py
football-server/alembic/versions/: 001_initial_schema.py  002_venue_zh_fields.py
football-server/app/: config.py  dependencies.py  main.py
football-server/app/controllers/: AGENTS.md  __init__.py  ai_controller.py  bracket_controller.py  cheer_controller.py  feishu_controller.py  group_controller.py  match_controller.py  stats_controller.py  team_controller.py  venue_controller.py  ws_controller.py
football-server/app/exceptions/: __init__.py  exceptions.py
football-server/app/middleware/: __init__.py  cors.py  error_handler.py  logging.py
football-server/app/models/: __init__.py  base.py  group_standing.py  match.py  match_event.py  team.py  venue.py
football-server/app/redis/: __init__.py  client.py  keys.py
football-server/app/repositories/: AGENTS.md  __init__.py  base.py  group_repo.py  match_event_repo.py  match_repo.py  team_repo.py  venue_repo.py
football-server/app/schemas/: __init__.py  ai_schema.py  bracket_schema.py  cheer_schema.py  common.py  group_schema.py  (+7 more)
football-server/scripts/: AGENTS.md  __init__.py  feishu_event_bridge.py  generate_bracket.py  monte_carlo_finals.py  seed_data.py  seed_matches.py  seed_teams.py  seed_venues.py  team_data.py  venue_data.py
(+143 files in other folders)
